# anki-wrapper

./: PLUGIN_DEV.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
docs/: plugin-development.md
scripts/: dev-with-test-deck.sh
src/: App.svelte  app.css  global.d.ts  main.ts  mathjax.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/sample-plugins/furigana-example/: index.js  manifest.json  styles.css
src-tauri/resources/sample-plugins/study-timer/: index.js  manifest.json
src-tauri/src/: lib.rs
src/lib/: CardBrowser.svelte  CardDetailPanel.svelte  CardEditor.svelte  Chart.svelte  Dashboard.svelte  DeckOptions.svelte  DeckOverview.svelte  DeckSettings.svelte  ImageOcclusion.svelte  ImportModal.svelte  KeyboardShortcuts.svelte  MiniDeck.svelte  NotetypeManager.svelte  PluginManager.svelte  RichTextEditor.svelte  Settings.svelte  StatsView.svelte  StudyCalendar.svelte  StudyView.svelte  TagInput.svelte  Toast.svelte  animate.svelte.ts  animate.ts  chartTheme.ts  customTheme.ts  importer.ts  loadingTracker.svelte.ts  mathjax.ts  media.ts  notifications.ts  pluginEngine.ts  pluginLoader.ts  prefs.svelte.ts  prefs.ts  scheduleStore.svelte.ts  seedData.ts  statsAPI.ts  studyNav.svelte.ts  studySchedule.ts  themes.ts  (+1 more)
src/lib/types/: scheduler.ts
src/lib/ui/: NeuDialog.svelte  NeuDropdown.svelte  NeuSelect.svelte  (+2 more)
tests/: build-check.sh  deck-crud-test.ts  runtime-check.ts  study-flow-test.ts  ui-smoke-test.ts
(+7 files in other folders)
